# OSStreams

./: .clang-format  .gitignore  .projections.json  Makefile  README.md  pom.xml
src/: CMakeLists.txt  Makefile
src/cmake/: Antlr.cmake  CamelToSnakeWithSep.cmake  Dependencies.cmake  Doc.cmake  FindAWSSDKCPP.cmake  FindBFD.cmake  FindDecnumber.cmake  FindHiredis.cmake  FindLber.cmake  FindLdap.cmake  FindLibANTLR3C.cmake  FindLibcap.cmake  FindPAM.cmake  FindPrometheusCpp.cmake  FindRocksDB.cmake  FindTecla.cmake  FindTidyp.cmake  FindXSD.cmake  FindXqilla.cmake  Format.cmake  Generators.cmake  Messages.cmake  XsltProc.cmake  cmake_uninstall.cmake.in
src/cpp/: CMakeLists.txt
src/cpp/K8S/: CMakeLists.txt  ConcurrentQueue.h  K8SApplication.cpp  K8SApplication.h  K8SConnectivityThread.cpp  K8SConnectivityThread.h  K8SConsistentRegionThread.cpp  K8SConsistentRegionThread.h  K8SMain.cpp  K8SMetrics.cpp  K8SMetrics.h  K8SMetricsThread.cpp  K8SMetricsThread.h  K8SPlatform.cpp  K8SPlatform.h  K8SProbeThread.cpp  K8SProbeThread.h  K8SRestClient.cpp  K8SRestClient.h  K8SSubscriptionsThread.cpp  K8SSubscriptionsThread.h  K8STypes.cpp  K8STypes.h  streams-k8s-bootstrap
src/cpp/MISC/: CMakeLists.txt
src/cpp/MISC/Tools/: CMakeLists.txt
src/cpp/MISC/UnitTests/: CMakeLists.txt  ConcurrentHashMapTest.cpp  PortLabelTest.cpp  RWLockTest.cpp  SupportFunctionsTest.cpp  TestUtils.h  ThreadLocalTest.cpp  ViewStreamMsgHeaderTest.cpp  (+16 more)
src/cpp/NAM/: CMakeLists.txt  FS_NameService.cpp  FS_NameService.h  K8S_NameService.cpp  K8S_NameService.h  NAM_Exceptions.h  NAM_NameService.cpp  NAM_NameService.h  NAM_Namespace.h  NAM_UserServiceUtil.cpp  NAM_UserServiceUtil.h
src/cpp/SAM/: CMakeLists.txt  LogicalToPhysical.cpp  LogicalToPhysical.h  LogicalToPhysicalJNI.cpp  LogicalToPhysicalJNI.h  SAMForwardDeclXSDTypes.h  SAMHelperFunctions.cpp  SAMHelperFunctions.h  SAMNamespaceDefs.h  SAMTypes.cpp  SAMTypes.h  SubmissionExpression.cpp  SubmissionExpression.h
src/cpp/SPL/: CMakeLists.txt
src/cpp/SRM/: CMakeLists.txt
src/cpp/TRANS/: CMakeLists.txt  ConnectionHandshake.cpp  ConnectionHandshake.h  ConnectionState.cpp  ConnectionState.h  DataReceiver.cpp  DataReceiver.h  DataSender.cpp  DataSender.h  DynDataSender.cpp  DynDataSender.h  OperatorPortLabel.cpp  OperatorPortLabel.h  OperatorPortLabelImpl.cpp  OperatorPortLabelImpl.h  PortLabel.cpp  PortLabel.h  PortLabelImpl.cpp  PortLabelImpl.h  TCPCommon.cpp  TCPCommon.h  TCPConnection.cpp  TCPConnection.h  TCPInstance.cpp  TCPInstance.h  TCPMonitorThread.cpp  TCPMonitorThread.h  TCPReceiver.cpp  TCPReceiver.h  TCPSender.cpp  TCPSender.h  TCPSenderDynamic.cpp  TCPSenderDynamic.h  TransportUtils.cpp  TransportUtils.h  ViewStreamMsgHeader.cpp  ViewStreamMsgHeader.h  ViewStreamSender.cpp  ViewStreamSender.h
src/cpp/TRC/: CMakeLists.txt  ColorConsoleTracer.cpp  ColorConsoleTracer.h  ConsoleLogger.cpp  ConsoleLogger.h  ConsoleTracer.cpp  ConsoleTracer.h  DistilleryDebug.cpp  DistilleryDebug.h  DistilleryDebugLogger.h  FileTracer.cpp  FileTracer.h  FilteredThColorConsoleTracer.cpp  FilteredThColorConsoleTracer.h  LogFactory.cpp  LogFactory.h  MemoryTracer.cpp  MemoryTracer.h  RingTracer.cpp  RingTracer.h  RollingFileHelper.cpp  RollingFileHelper.h  RollingFileLogger.cpp  RollingFileLogger.h  RollingFileTracer.cpp  RollingFileTracer.h  RuntimeTrcAspects.h  SyslogLogger.cpp  SyslogLogger.h  TRCTypes.h  TRCUtils.cpp  TRCUtils.h  ThColorConsoleTracer.cpp  ThColorConsoleTracer.h
src/cpp/UTILS/: ArgContainer.h  Atomic.h  BacktraceDumper.cpp  BacktraceDumper.h  Base64.cpp  Base64.h  BipartiteCover.cpp  BipartiteCover.h  BipartiteGraph.cpp  BipartiteGraph.h  BipartiteMatching.cpp  BipartiteMatching.h  BitOperationUtils.cpp  BitOperationUtils.h  BufferedLineReader.cpp  BufferedLineReader.h  CMakeLists.txt  CRC32.cpp  CRC32.h  CV.cpp  CV.h  ConcurrentHashMap.h  ConsoleReader.cpp  ConsoleReader.h  DSTAutoConf.h  Directory.cpp  Directory.h  DistilleryApplication.cpp  DistilleryApplication.h  DistilleryApplicationInstantiator.cpp  DistilleryApplicationThreads.cpp  DistilleryApplicationThreads.h  DistilleryCallback.h  DistilleryException.cpp  DistilleryException.h  DistilleryExceptionCode.cpp  DistilleryExceptionCode.h  DistilleryKnobs.cpp  DistilleryKnobs.h  DistilleryServant.h  (+110 more)
src/doxygen/: doxy.pl  doxycss.fls  doxygen.fls  fixlib.py  fl.py
src/messages/: CMakeLists.txt  StreamsAdminMessages.xlf  StreamsAdminMessages_de.xlf  StreamsAdminMessages_es.xlf  StreamsAdminMessages_fr.xlf  StreamsAdminMessages_it.xlf  StreamsAdminMessages_ja.xlf  StreamsAdminMessages_ko.xlf  StreamsAdminMessages_pt_BR.xlf  StreamsAdminMessages_ru.xlf  StreamsAdminMessages_zh_CN.xlf  StreamsAdminMessages_zh_TW.xlf  StreamsAuditMessages.xlf  StreamsAuditMessages_de.xlf  StreamsAuditMessages_es.xlf  StreamsAuditMessages_fr.xlf  StreamsAuditMessages_it.xlf  StreamsAuditMessages_ja.xlf  StreamsAuditMessages_ko.xlf  StreamsAuditMessages_pt_BR.xlf  StreamsAuditMessages_ru.xlf  StreamsAuditMessages_zh_CN.xlf  StreamsAuditMessages_zh_TW.xlf  StreamsRuntimeMessages.xlf  StreamsRuntimeMessages_de.xlf  StreamsRuntimeMessages_es.xlf  StreamsRuntimeMessages_fr.xlf  StreamsRuntimeMessages_it.xlf  StreamsRuntimeMessages_ja.xlf  StreamsRuntimeMessages_ko.xlf  StreamsRuntimeMessages_pt_BR.xlf  StreamsRuntimeMessages_ru.xlf  StreamsRuntimeMessages_zh_CN.xlf  StreamsRuntimeMessages_zh_TW.xlf  StreamsSwsMessages.xlf  StreamsSwsMessages_de.xlf  StreamsSwsMessages_es.xlf  StreamsSwsMessages_fr.xlf  StreamsSwsMessages_it.xlf  StreamsSwsMessages_ja.xlf  (+7 more)
src/pkgconfigcfg/: CMakeLists.txt  dst-pe-distillery.pc.tmpl  dst-pe-ext.pc.tmpl  dst-pe-install.pc.tmpl  dst-pe-pkg-config-alternative.sh  dst-pe-pkg-config.sh
src/schema/: CMakeLists.txt
src/schema/CLI/: CMakeLists.txt  streamsInstanceState.xsd  streamsMetrics.xsd  streamsStateTypes.xsd  streamsTypes.xsd
src/schema/SAM/: CMakeLists.txt  SAMInterfaceTypes.xsd  applicationModel.xsd  augmentedApplicationModel.xsd  physicalApplicationModel.xsd
src/schema/SPL/: CMakeLists.txt
src/schema/UTILS/: CMakeLists.txt  Exception.xsd  MessageRecordingTypes.xsd
(+3111 files in other folders)
